# para-assignments

./: .gitignore  CMakeLists.txt  README.md
assignment1/: CMakeLists.txt
assignment1/exercise0/: main.cpp
assignment1/exercise1/: main.cpp
assignment1/exercise2/: main.cpp
assignment2/: CMakeLists.txt
assignment2/exercise1/: main.c  time_results.md
assignment2/exercise2/: main.c  time_results.md
assignment3/: CMakeLists.txt
assignment3/exercise1/: main.c  time_results.md
assignment3/exercise2/: Game_Of_Life.c  Game_Of_Life_OpenMP.c
assignment3/exercise3/: compare-bins.py  main.c
assignment4/: CMakeLists.txt  hosts
assignment4/exercise0/: hello_mpi.c
assignment4/exercise1/: bcast_reduce.c  send_recv.c
